--- a/config/config.json
+++ b/config/config.json
@@ -14,7 +14,11 @@
     "dialect": "mysql"
   },
   "production": {
+    "host": "nwhazdrp7hdpd4a4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "use_env_variable": "JAWSDB_URL",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "username": "vhnutectzvlhhdgu",
+    "password": "o0xon4pvt0tvxo6r",
+    "database": "ljqja0cknx1j7cv8"
   }
 }
