--- a/config/config.json
+++ b/config/config.json
@@ -16,9 +16,9 @@
   "production": {
     "host": "nwhazdrp7hdpd4a4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "use_env_variable": "JAWSDB_URL",
-    "dialect": "mysql",
-    "username": "vhnutectzvlhhdgu",
-    "password": "o0xon4pvt0tvxo6r",
-    "database": "ljqja0cknx1j7cv8"
+    "dialect": "mysql"
+    // "username": "vhnutectzvlhhdgu",
+    // "password": "o0xon4pvt0tvxo6r",
+    // "database": "ljqja0cknx1j7cv8"
   }
 }
